# sofar-stage_1

./: .gitignore  README.md  So Far Pscr 实验设计报告.docx  baseline_stage1_todolist.json  baseline_stage1_tracker.md  baseline_stage2_todolist.json  baseline_stage2_tracker.md  baseline_stage3_todolist.json  baseline_stage3_tracker.md  baseline_stage4_todolist.json  baseline_stage4_tracker.md  baseline_stage5_todolist.json  baseline_stage5_tracker.md  coding.code-workspace  git_README.md  so_far_pscr_实验设计报告.md  sofar_pipeline_note.md  交接操作.txt  当前代码地图与交接总表.md  文档入口.md
sofar/: INSTALL.md  README.md  pyproject.toml  stage2_open6dor_parser_records.csv  stage2_open6dor_parser_records_20260415_144624.json  stage3_open6dor_grounding_records.csv  stage3_open6dor_grounding_records.json  stage3_spatialbench_grounding_records.csv  stage3_spatialbench_grounding_records.json  stage4_open6dor_point_records.csv  stage4_open6dor_point_records_20260415_150850.json  stage4_spatialbench_point_records.csv  stage4_spatialbench_point_records.json
sofar/analysis/: run_open6dor_subset_ablation.py  stage8_agent_ablation.py  stage8_agent_eval.py
sofar/assets/: drawer.npy  navigation.npy  simpler_env.npy
sofar/depth/: depthanythingv2.py  metric3dv2.py  moge.py  utils.py
sofar/open6dor/: eval_open6dor.py  eval_subset_sampling.py  evaluator.py  open6dor_perception.py  open6dor_perception_llava.py  orientation_templates.json  utils.py
sofar/orientation/: stage5_dry_run.py  stage5_eval_unseen.py  stage5_refresh_manifests.py  stage5_split_open6dor_manifest.py  stage5_train_pilot.py  test.sh  (+4 more)
(+210 files in other folders)
